# Revork

./: CMakeLists.txt  main.cpp
dep/universal/: stb_image.h
res/shaders/gameobject/: gameobject.fs  gameobject.vs
revork/: .gitignore  revork.h
revork/dep/universal/: draw_text.h
revork/res/shaders/gameobject/: gameobject.fs
revork/res/shaders/skybox/: skybox.fs  skybox.vs
revork/src/: camera.h  config.cpp  config.h  input.h  revork.cpp  utility.h  window_manager.cpp  window_manager.h
revork/src/entity/: entity.h  gameobject.h
revork/src/renderer/: mesh.h  renderer.cpp  renderer.h  shader.cpp  skybox.h
src/: camera.cpp  imgui_impl_glfw_gl3.cpp  input.h  transform.h  window_manager.cpp  window_manager.h
src/entity/: entity.h
src/renderer/: renderer.cpp  renderer.h  shader.h  skybox.cpp  texture.cpp  texture.h
